# hoards

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  release-plz.toml
.claude/skills/git/: SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: hoard-future-features.md
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  RESEARCH.md  TUI_GUIDE.md  USER_GUIDE.md
shell/fish/completions/: hoard.fish
src/: ai.rs  cli.rs  config.rs  db.rs  discover.rs  github.rs  history.rs  http.rs  icons.rs  lib.rs  main.rs  models.rs  scanner.rs  updates.rs
src/ai/: builders.rs
src/commands/: ai.rs  bundle.rs  completions.rs  config.rs  core.rs  discover.rs  github.rs  helpers.rs  insights.rs  install.rs  label.rs  misc.rs  mod.rs  sync.rs  updates_cmd.rs  usage.rs  workflow.rs
src/db/: discover.rs  github.rs  labels.rs  mod.rs  schema.rs  tools.rs  usage.rs
src/sources/: apt.rs  brew.rs  cargo.rs  flatpak.rs  manual.rs  mod.rs  npm.rs  pip.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/app/: actions.rs  command_exec.rs  mod.rs  types.rs
src/tui/ui/: dialogs.rs  discover.rs  footer.rs  mod.rs  overlays.rs
tests/: cli_basic.rs  security.rs
tests/common/: mod.rs
